<resources>
    <string name="app_name">EdmundYap</string>
    <string name="action_settings">Settings</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="save">Save</string>
    <string name="passport">Passport</string>
    <string name="category">Category</string>
    <string name="disable">Disable</string>
    <string name="cal">Fee</string>
    <string name="empty_input">Invalid Input</string>
    <string name="insert">Insert</string>
    <string name="empty_not_saved">Record not save</string>
    <string name="no_record">No record</string>
</resources>
