<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InsertActivity">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="368dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="Checking Of Passport Fee (MY)"
        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
        android:textColor="@color/colorPrimary"
        app:fontFamily="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextPassportNum"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/passport"
        android:inputType="textPersonName|number"
        android:text="Passport Number"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextFirstName"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:text="First Name"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassportNum"
        app:layout_constraintVertical_bias="0.026" />

    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:text="Last Name"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextFirstName"
        app:layout_constraintVertical_bias="0.037" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="110dp"
        android:layout_height="58dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:text="   Category "
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLastName"
        app:layout_constraintVertical_bias="0.032" />

    <CheckBox
        android:id="@+id/checkBoxSenior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Senior Citizen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.149"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/checkBoxChild"
        android:layout_width="124dp"
        android:layout_height="33dp"
        android:text="Child below 12"
        app:layout_constraintBottom_toTopOf="@+id/checkBoxHaj"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.621"
        app:layout_constraintStart_toEndOf="@+id/checkBoxSenior"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/checkBoxStud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:text="Student Below 12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.165"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxSenior"
        app:layout_constraintVertical_bias="0.081" />

    <CheckBox
        android:id="@+id/checkBoxHaj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="160dp"
        android:text="Haj pilgrims"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.402"
        app:layout_constraintStart_toEndOf="@+id/checkBoxStud"
        app:layout_constraintVertical_bias="0.062" />

    <TextView
        android:id="@+id/textViewDisable"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:text="Disabled : "
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxStud"
        app:layout_constraintVertical_bias="0.089" />

    <RadioButton
        android:id="@+id/radioButtonyes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Yes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.374"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxStud"
        app:layout_constraintVertical_bias="0.037" />

    <RadioButton
        android:id="@+id/radioButtonno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="No"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.253"
        app:layout_constraintStart_toEndOf="@+id/radioButtonyes"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxHaj"
        app:layout_constraintVertical_bias="0.03" />

    <TextView
        android:id="@+id/textViewCal"
        android:layout_width="104dp"
        android:layout_height="31dp"
        android:text="Total Fee :"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButtonyes"
        app:layout_constraintVertical_bias="0.164" />

    <TextView
        android:id="@+id/textViewamt"
        android:layout_width="61dp"
        android:layout_height="34dp"
        android:layout_marginBottom="72dp"
        android:text="Amount "
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textViewCal" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="8dp"
        android:text="Save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>